--- a/dataManagement/templates/data.html
+++ b/dataManagement/templates/data.html
@@ -8,18 +8,20 @@
     {% load static %}
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="{%static 'dataManagement/css/data.css' %}" />
 
     <title>Representación datos eléctricos</title>
   </head>
   <body>
-    <div class="container">
-      <div class="tmeasures-div">
-          <div class="title-div">
+    <div id="container">
+      <div id="tmeasures-div">
+          <div id="title-div">
           <h3>Representación de datos eléctricos</h3>
           </div>
-          <div class="tmeasures-div">
+          <div id="tmeasures-table">
           <table id="tmeasures" class="table table-bordred table-striped">
-            <thead>
+            <thead id="tmeasures-header">
                   <th scope="col">#</th>
                   <th scope="col">Date</th>
                   <th scope="col">Energy (kWh)</th>
