--- a/dataManagement/templates/data.html
+++ b/dataManagement/templates/data.html
@@ -16,6 +16,7 @@
   <body>
     <div id="container">
       <div id="tmeasures-div">
+          <button id="bmore" class="btn btn-secondary" onclick="goForm()">+</button>
           <div id="title-div">
           <h3>Representación de datos eléctricos</h3>
           </div>
