--- a/dataManagement/templates/dataForm.html
+++ b/dataManagement/templates/dataForm.html
@@ -11,11 +11,11 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="{%static 'dataManagement/css/dataForm.css' %}" />
 
-    <title> Formulacio crear/modificar</title>
+    <title> Formulario crear/modificar</title>
   </head>
   <body>
     <div id="container">
-      <form method="POST", action="/update/">
+      <form method="POST", action="" onsubmit="processForm()">
         <div class="form-group">
           <label for="energy"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Energy (kWh)</font></font></label>
           <input type="number" step="0.001" min="0" class="form-control" id="energy" placeholder="energy" name="energy">
@@ -25,8 +25,8 @@
           <input type="number" step="0.001" min="0" class="form-control" id="react-energy" placeholder="react-energy" name="react-energy">
         </div>
         <div class="form-group">
-          <label for="power"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Power (kW)</font></font></label>
-          <input type="number" step="0.001" min="0" class="form-control" id="power" placeholder="power" name="power">
+          <label for="pow"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Power (kW)</font></font></label>
+          <input type="number" step="0.001" min="0" class="form-control" id="pow" placeholder="power" name="pow">
         </div>
         <div class="form-group">
           <label for="maximeter"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Maximeter (kW)</font></font></label>
