--- a/dataManagement/static/dataManagement/css/dataForm.css
+++ b/dataManagement/static/dataManagement/css/dataForm.css
@@ -15,6 +15,12 @@ body {
     box-shadow: 0px 10px 10px -6px gray;
 }
 
+#title-div h2{
+    margin: 20px auto 0 0;
+    color: #388b97;
+    text-align: center;
+}
+
 form{
     padding: 20px;
     font-weight: bold;
