--- a/dataManagement/templates/dataForm.html
+++ b/dataManagement/templates/dataForm.html
@@ -15,6 +15,9 @@
   </head>
   <body>
     <div id="container">
+      <div id="title-div">
+        <h2 id="title"></h2>
+      </div>
       <form method="POST", action="" onsubmit="processForm()">
         {% csrf_token %}
         <div class="form-group">
